--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Required meta tags -->
+  <!-- Meta tags for responsiveness and basic SEO -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -10,11 +10,11 @@
   <meta name="description" content="Eco-friendly products and tips for a sustainable lifestyle. A demo e-commerce website.">
   <meta name="author" content="Student Group">
 
-  <!-- External CSS (site-wide styling) -->
+  <!-- Main CSS file used across all pages -->
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <!-- ===================== SITE HEADER + NAV ===================== -->
+  <!-- Header section with logo and navigation links-->
   <header class="site-header">
     <div class="container navbar">
       <a class="brand" href="index.html" aria-label="Go to Home page">
@@ -24,7 +24,7 @@
 
       <nav aria-label="Primary">
         <ul>
-          <!-- data-page helps JavaScript highlight the current page -->
+          <!-- page linking helps JavaScript highlight the current page -->
           <li><a href="index.html" data-page="index.html">Home</a></li>
           <li><a href="products.html" data-page="products.html">Products</a></li>
           <li><a href="blog.html" data-page="blog.html">Blog</a></li>
@@ -32,7 +32,7 @@
           <li><a href="about.html" data-page="about.html">About Us</a></li>
           <li><a href="contact.html" data-page="contact.html">Contact</a></li>
 
-          <!-- Theme toggle + cart badge show dynamic JavaScript behavior -->
+          <!-- Theme toggle button and cart count (using JS) -->
           <li><button class="btn" id="themeToggle" aria-pressed="false" type="button">Toggle theme</button></li>
           <li>
             <span class="chip" aria-label="Cart items">
@@ -44,14 +44,14 @@
     </div>
   </header>
 
-  <!-- ===================== HOME HERO ===================== -->
+  <!--Main section shown at the top of the home page-->
   <main>
     <section class="hero">
       <div class="container hero-card">
         <div>
           <div class="chip">♻️ Low-waste • Reusable • Ethical</div>
 
-          <!-- Inline CSS usage (one-off highlight badge) -->
+          <!-- Inline CSS use -->
           <p style="margin:0.65rem 0 0; display:inline-block; padding:0.25rem 0.6rem; border-radius:999px; border:1px dashed #16a34a;">
             New year deal: Save up to 30% on essentials
           </p>
@@ -67,7 +67,7 @@
             <a class="btn" href="contact.html">Ask a Question</a>
           </div>
 
-          <!-- Brief description of contents present on different webpages (required) -->
+          <!-- Brief description of contents present on different webpages -->
           <div class="card" style="margin-top: 1rem;">
             <h2>What’s inside this website?</h2>
             <ul>
