--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       </div>
     </section>
 
-    <!-- ===================== FEATURED PRODUCTS (dynamic) ===================== -->
+    <!-- = FEATURED PRODUCTS (dynamic)-->
     <section>
       <div class="container">
         <h2>Featured essentials (dynamic content)</h2>
@@ -114,7 +114,7 @@
       </div>
     </section>
 
-    <!-- ===================== TESTIMONIALS ===================== -->
+    <!--Information Cards -->
     <section style="margin-top:1.5rem;">
       <div class="container grid grid-3">
         <article class="card">
