Update reference list and demo description
Removed some references and simplified demo description.

--- a/research.html
+++ b/research.html
@@ -71,11 +71,8 @@
       <h2>Reference websites (5+)</h2>
       <p class="muted">These are examples of real e-commerce websites that commonly include advanced components:</p>
       <ol class="refs">
-        <li><span class="pill">Reference 1</span> Amazon — product reviews, recommendations, “frequently bought together”</li>
-        <li><span class="pill">Reference 2</span> Daraz — filters, flash sales, category navigation, delivery tracking</li>
-        <li><span class="pill">Reference 3</span> Etsy — handcrafted marketplace, seller profiles, favorites, personalization</li>
-        <li><span class="pill">Reference 4</span> IKEA — room planners, rich product galleries, stock availability per store</li>
-        <li><span class="pill">Reference 5</span> Apple Store — high-quality product storytelling, comparisons, animations</li>
+        <li><span class="pill">Reference 1</span> Daraz — filters, flash sales, category navigation, delivery tracking</li>
+        <li><span class="pill">Reference 2</span> Etsy — handcrafted marketplace, seller profiles, favorites, personalization</li>
       </ol>
       </p>
     </section>
@@ -129,7 +126,7 @@
           <tr>
             <td><strong>Trust & social proof</strong></td>
             <td>
-              Currently a demo: includes product descriptions and simple UI, but no real reviews.
+              Currently a demo: includes product descriptions and simple UI.
             </td>
             <td>
               Reviews, star ratings, Q&A, verified purchase labels, seller scores, and user-uploaded photos.
