placed html files in Pages folder
changes

--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -1,13 +1,4 @@
 <!DOCTYPE html>
-<!-- =========================================================
-     GREENLIVING STORE — Contact
-     Technologies: HTML5, CSS3, JavaScript
-     Notes:
-     - Proper tag nesting and semantic elements are used.
-     - External CSS: css/main.css
-     - Internal CSS: page-specific tweaks inside <style> block
-     - Inline CSS: used sparingly for a one-off element on the page
-     ========================================================= -->
 <html lang="en">
 <head>
   <!-- Required meta tags -->
@@ -20,7 +11,7 @@
   <meta name="author" content="Student Group">
 
   <!-- External CSS (site-wide styling) -->
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
   <!-- ===================== SITE HEADER + NAV ===================== -->
@@ -153,7 +144,7 @@
   </main>
 
   <!-- Page-specific JS for form validation (separate file, well-commented) -->
-  <script src="js/form.js"></script>
+  <script src="../js/form.js"></script>
   <!-- ===================== SITE FOOTER ===================== -->
   <footer class="site-footer">
     <div class="container footer-row">
@@ -169,6 +160,6 @@
   </footer>
 
   <!-- External JavaScript -->
-  <script src="js/main.js"></script>
+  <script src="../js/main.js"></script>
 </body>
 </html>
