--- a/Pages/index.html
+++ b/Pages/index.html
@@ -11,7 +11,7 @@
   <meta name="author" content="Student Group">
 
   <!-- Main CSS file used across all pages -->
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
   <!-- Header section with logo and navigation links-->
@@ -164,6 +164,6 @@
   </footer>
 
   <!-- External JavaScript -->
-  <script src="js/main.js"></script>
+  <script src="../js/main.js"></script>
 </body>
 </html>
