--- a/Pages/products.html
+++ b/Pages/products.html
@@ -20,7 +20,7 @@
   <meta name="author" content="Student Group">
 
   <!-- External CSS (site-wide styling) -->
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
   <!-- ===================== SITE HEADER + NAV ===================== -->
@@ -240,6 +240,6 @@
   </footer>
 
   <!-- External JavaScript -->
-  <script src="js/main.js"></script>
+  <script src="../js/main.js"></script>
 </body>
 </html>
