--- a/Pages/about.html
+++ b/Pages/about.html
@@ -1,13 +1,5 @@
 <!DOCTYPE html>
-<!-- =========================================================
-     GREENLIVING STORE — About Us
-     Technologies: HTML5, CSS3, JavaScript
-     Notes:
-     - Proper tag nesting and semantic elements are used.
-     - External CSS: css/main.css
-     - Internal CSS: page-specific tweaks inside <style> block
-     - Inline CSS: used sparingly for a one-off element on the page
-     ========================================================= -->
+
 <html lang="en">
 <head>
   <!-- Required meta tags -->
@@ -20,7 +12,7 @@
   <meta name="author" content="Student Group">
 
   <!-- External CSS (site-wide styling) -->
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
   <!-- ===================== SITE HEADER + NAV ===================== -->
@@ -194,6 +186,6 @@
   </footer>
 
   <!-- External JavaScript -->
-  <script src="js/main.js"></script>
+  <script src="../js/main.js"></script>
 </body>
 </html>
