--- a/Pages/about.html
+++ b/Pages/about.html
@@ -19,7 +19,7 @@
   <header class="site-header">
     <div class="container navbar">
       <a class="brand" href="index.html" aria-label="Go to Home page">
-        <img src="images/logo.svg" alt="GreenLiving Store logo">
+        <img src="../images/logo.svg" alt="GreenLiving Store logo">
         <strong>GreenLiving</strong>
       </a>
 
@@ -34,7 +34,6 @@
           <li><a href="contact.html" data-page="contact.html">Contact</a></li>
 
           <!-- Theme toggle + cart badge show dynamic JavaScript behavior -->
-          <li><button class="btn" id="themeToggle" aria-pressed="false" type="button">Toggle theme</button></li>
           <li>
             <span class="chip" aria-label="Cart items">
               🛒 Cart: <span id="cartCount">0</span>
