--- a/Pages/blog.html
+++ b/Pages/blog.html
@@ -14,11 +14,11 @@
   <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
-  <!-- ===================== SITE HEADER + NAV ===================== -->
+  <!-- SITE HEADER + NAV -->
   <header class="site-header">
     <div class="container navbar">
       <a class="brand" href="index.html" aria-label="Go to Home page">
-        <img src="images/logo.svg" alt="GreenLiving Store logo">
+        <img src="../images/logo.svg" alt="GreenLiving Store logo">
         <strong>GreenLiving</strong>
       </a>
 
@@ -32,8 +32,7 @@
           <li><a href="about.html" data-page="about.html">About Us</a></li>
           <li><a href="contact.html" data-page="contact.html">Contact</a></li>
 
-          <!-- Theme toggle + cart badge show dynamic JavaScript behavior -->
-          <li><button class="btn" id="themeToggle" aria-pressed="false" type="button">Toggle theme</button></li>
+          <!-- cart badge show dynamic JavaScript behavior -->
           <li>
             <span class="chip" aria-label="Cart items">
               🛒 Cart: <span id="cartCount">0</span>
@@ -48,7 +47,7 @@
     <h1>Blog</h1>
     <p class="muted">Demonstration: How technology has affected daily life and business.</p>
 
-    <!-- Internal CSS: blog typography and callout boxes -->
+    <!-- Internal CSS -->
     <style>
       /* Blog page: make article content readable with better measure */
       .article { max-width: 850px; margin: 0 auto; }
