--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
-  <!-- ===================== SITE HEADER + NAV ===================== -->
+  <!--SITE HEADER + NAV-->
   <header class="site-header">
     <div class="container navbar">
       <a class="brand" href="index.html" aria-label="Go to Home page">
@@ -33,7 +33,6 @@
           <li><a href="contact.html" data-page="contact.html">Contact</a></li>
 
           <!-- Theme toggle + cart badge show dynamic JavaScript behavior -->
-          <li><button class="btn" id="themeToggle" aria-pressed="false" type="button">Toggle theme</button></li>
           <li>
             <span class="chip" aria-label="Cart items">
               🛒 Cart: <span id="cartCount">0</span>
@@ -145,7 +144,7 @@
 
   <!-- Page-specific JS for form validation (separate file, well-commented) -->
   <script src="../js/form.js"></script>
-  <!-- ===================== SITE FOOTER ===================== -->
+  <!-- SITE FOOTER -->
   <footer class="site-footer">
     <div class="container footer-row">
       <div>
