--- a/Pages/products.html
+++ b/Pages/products.html
@@ -1,25 +1,16 @@
 <!DOCTYPE html>
-<!-- =========================================================
-     GREENLIVING STORE — Products
-     Technologies: HTML5, CSS3, JavaScript
-     Notes:
-     - Proper tag nesting and semantic elements are used.
-     - External CSS: css/main.css
-     - Internal CSS: page-specific tweaks inside <style> block
-     - Inline CSS: used sparingly for a one-off element on the page
-     ========================================================= -->
 <html lang="en">
 <head>
-  <!-- Required meta tags -->
+  <!-- meta tags -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- SEO / descriptive metadata -->
+  <!-- metadata -->
   <title>GreenLiving Store — Products</title>
   <meta name="description" content="Browse sustainable lifestyle products with prices, discounts, and details.">
   <meta name="author" content="Student Group">
 
-  <!-- External CSS (site-wide styling) -->
+  <!-- External CSS-->
   <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
@@ -27,7 +18,7 @@
   <header class="site-header">
     <div class="container navbar">
       <a class="brand" href="index.html" aria-label="Go to Home page">
-        <img src="images/logo.svg" alt="GreenLiving Store logo">
+        <img src="../images/logo.svg" alt="GreenLiving Store logo">
         <strong>GreenLiving</strong>
       </a>
 
@@ -42,7 +33,6 @@
           <li><a href="contact.html" data-page="contact.html">Contact</a></li>
 
           <!-- Theme toggle + cart badge show dynamic JavaScript behavior -->
-          <li><button class="btn" id="themeToggle" aria-pressed="false" type="button">Toggle theme</button></li>
           <li>
             <span class="chip" aria-label="Cart items">
               🛒 Cart: <span id="cartCount">0</span>
@@ -60,7 +50,7 @@
       (This is a front-end demo; no payment processing.)
     </p>
 
-    <!-- Internal CSS: only for products page filter bar and badges -->
+    <!-- Internal CSS(for products page filter bar and badges) -->
     <style>
       /* Products page: filter bar styling (page-specific UI) */
       .filter-bar { display:flex; gap:0.6rem; flex-wrap:wrap; align-items:center; margin: 0.75rem 0 1rem; }
@@ -77,7 +67,7 @@
     <!-- Products list uses semantic articles; ids match JS data for anchor links -->
     <section class="grid grid-3">
       <article class="card product" id="bamboo-toothbrush">
-        <img src="images/product_bamboo_toothbrush.jpg" alt="Bamboo toothbrush product image">
+        <img src="../images/product_bamboo_toothbrush.jpg" alt="Bamboo toothbrush product image">
         <div class="chip">Plastic-free • Bathroom</div>
         <h2 style="margin:0;">Bamboo Toothbrush (Pack of 4)</h2>
         <div class="price-row">
@@ -101,7 +91,7 @@
       </article>
 
       <article class="card product" id="reusable-bottle">
-        <img src="images/product_reusable_bottle.jpg" alt="Reusable bottle product image">
+        <img src="../images/product_reusable_bottle.jpg" alt="Reusable bottle product image">
         <div class="chip">Reusable • Travel</div>
         <h2 style="margin:0;">Insulated Reusable Bottle (750ml)</h2>
         <div class="price-row">
@@ -120,7 +110,7 @@
       </article>
 
       <article class="card product" id="compostable-sponges">
-        <img src="images/product_sponges.jpg" alt="Compostable sponges product image">
+        <img src="../images/product_sponges.jpg" alt="Compostable sponges product image">
         <div class="chip">Kitchen • Low-waste</div>
         <h2 style="margin:0;">Compostable Kitchen Sponges</h2>
         <div class="price-row">
@@ -139,7 +129,7 @@
       </article>
 
       <article class="card product" id="cotton-tote">
-        <img src="images/product_tote.jpg" alt="Cotton tote bag product image">
+        <img src="../images/product_tote.jpg" alt="Cotton tote bag product image">
         <div class="chip">Reusable • Grocery</div>
         <h2 style="margin:0;">Organic Cotton Tote Bag</h2>
         <div class="price-row">
@@ -157,7 +147,7 @@
       </article>
 
       <article class="card product" id="solar-lamp">
-        <img src="images/product_solar_lamp.jpg" alt="Mini solar lamp product image">
+        <img src="../images/product_solar_lamp.jpg" alt="Mini solar lamp product image">
         <div class="chip">Energy • Home</div>
         <h2 style="margin:0;">Mini Solar Desk Lamp</h2>
         <div class="price-row">
@@ -175,7 +165,7 @@
       </article>
 
       <article class="card product" id="beeswax-wraps">
-        <img src="images/product_beeswax.jpg" alt="Beeswax wraps product image">
+        <img src="../images/product_beeswax.jpg" alt="Beeswax wraps product image">
         <div class="chip">Kitchen • Reusable</div>
         <h2 style="margin:0;">Beeswax Food Wraps (Set of 3)</h2>
         <div class="price-row">
@@ -194,7 +184,7 @@
       </article>
     </section>
 
-    <!-- Demonstration of table usage (required HTML tag) -->
+    <!-- use of table -->
     <section style="margin-top: 1.5rem;">
       <h2>Delivery & Returns (table demo)</h2>
       <table aria-label="Delivery and returns">
@@ -225,7 +215,7 @@
       </table>
     </section>
   </main>
-  <!-- ===================== SITE FOOTER ===================== -->
+  <!-- footer -->
   <footer class="site-footer">
     <div class="container footer-row">
       <div>
