--- a/Pages/research.html
+++ b/Pages/research.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Required meta tags -->
+  <!-- meta tags -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- SEO / descriptive metadata -->
+  <!-- metadata -->
   <title>GreenLiving Store — Research</title>
   <meta name="description" content="Research section contrasting your website components against researched websites.">
   <meta name="author" content="Student Group">
@@ -14,17 +14,17 @@
   <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
-  <!-- ===================== SITE HEADER + NAV ===================== -->
+  <!--SITE HEADER + NAV -->
   <header class="site-header">
     <div class="container navbar">
       <a class="brand" href="index.html" aria-label="Go to Home page">
-        <img src="images/logo.svg" alt="GreenLiving Store logo">
+        <img src="../images/logo.svg" alt="GreenLiving Store logo">
         <strong>GreenLiving</strong>
       </a>
 
       <nav aria-label="Primary">
         <ul>
-          <!-- data-page helps JavaScript highlight the current page -->
+          <!-- data-page to highlight the current page -->
           <li><a href="index.html" data-page="index.html">Home</a></li>
           <li><a href="products.html" data-page="products.html">Products</a></li>
           <li><a href="blog.html" data-page="blog.html">Blog</a></li>
@@ -32,8 +32,7 @@
           <li><a href="about.html" data-page="about.html">About Us</a></li>
           <li><a href="contact.html" data-page="contact.html">Contact</a></li>
 
-          <!-- Theme toggle + cart badge show dynamic JavaScript behavior -->
-          <li><button class="btn" id="themeToggle" aria-pressed="false" type="button">Toggle theme</button></li>
+          <!-- cart-badge -->
           <li>
             <span class="chip" aria-label="Cart items">
               🛒 Cart: <span id="cartCount">0</span>
@@ -51,7 +50,7 @@
       The focus is on “peculiar” components that other sites have more than others (e.g., advanced search, reviews, animations).
     </p>
 
-    <!-- Internal CSS: research page notes formatting -->
+    <!-- Internal CSS -->
     <style>
       /* Research page: make reference links stand out */
       .refs a { word-break: break-word; }
@@ -71,7 +70,7 @@
     <section style="margin-top: 1.25rem;">
       <h2>Component comparison table</h2>
 
-      <!-- Required: table tag + contrast components -->
+      <!-- table tag + contrast components -->
       <table aria-label="Research comparison table">
         <thead>
           <tr>
@@ -150,7 +149,6 @@
       <div class="card" style="margin-top:1rem;">
         <h3>What makes our site “peculiar” for an assignment?</h3>
         <ul>
-          <li>Theme toggle (dark mode) implemented with JavaScript.</li>
           <li>Dynamic featured products injection on the Home page.</li>
           <li>Cart counter stored in localStorage (simple state persistence).</li>
           <li>Client-side form validation with live error messages.</li>
@@ -159,7 +157,7 @@
       </div>
     </section>
   </main>
-  <!-- ===================== SITE FOOTER ===================== -->
+  <!-- SITE FOOTER -->
   <footer class="site-footer">
     <div class="container footer-row">
       <div>
