--- a/Pages/index.html
+++ b/Pages/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
-  <!-- navigation link and logo-->
+  <!-- home page and logo-->
   <header class="site-header">
     <div class="container navbar">
       <a class="brand" href="index.html" aria-label="Go to Home page">
@@ -43,7 +43,7 @@
     </div>
   </header>
 
-  <!--Main section shown at the top of the home page-->
+  <!--Main section-->
   <main>
     <section class="hero">
       <div class="container hero-card">
@@ -66,9 +66,9 @@
             <a class="btn" href="contact.html">Ask a Question</a>
           </div>
 
-          <!-- Brief description of contents present on different webpages -->
+          <!-- description of contents -->
           <div class="card" style="margin-top: 1rem;">
-            <h2>What’s inside this website?</h2>
+            <h2>What's inside this website?</h2>
             <ul>
               <li><strong>Products:</strong> product name, discounted & actual price, descriptions, and tags.</li>
               <li><strong>Blog:</strong> a short demonstration of how technology impacts daily life & business.</li>
@@ -94,7 +94,6 @@
                 <p class="muted" style="margin:0;">Items in your cart</p>
               </div>
             </div>
-            <!-- Simple stats shown on home page-->
           </div>
         </div>
       </div>
@@ -108,7 +107,6 @@
           These product cards are injected using JavaScript on page load to demonstrate dynamic DOM updates.
         </p>
         <div class="grid grid-3" id="featuredProducts">
-          <!-- JS inserts product cards here -->
         </div>
       </div>
     </section>
@@ -156,7 +154,7 @@
         <div class="small">Demo website for coursework (HTML5/CSS3/JS).</div>
       </div>
       <div class="small">
-        <div>© 2026 GreenLiving (Demo)</div>
+        <div>© 2026 GreenLiving</div>
         <div class="muted">Made with ♻️ in Nepal</div>
       </div>
     </div>
