--- a/Pages/research.html
+++ b/Pages/research.html
@@ -162,10 +162,10 @@
     <div class="container footer-row">
       <div>
         <div class="small"><strong>GreenLiving Store</strong> — sustainable lifestyle products for everyday use.</div>
-        <div class="small">Demo website for coursework (HTML5/CSS3/JS).</div>
+        <div class="small">Static website for Information System (HTML5/CSS3/JS).</div>
       </div>
       <div class="small">
-        <div>© 2026 GreenLiving (Demo)</div>
+        <div>© 2026 GreenLiving</div>
         <div class="muted">Made with ♻️ in Nepal</div>
       </div>
     </div>
