--- a/Pages/about.html
+++ b/Pages/about.html
@@ -2,20 +2,20 @@
 
 <html lang="en">
 <head>
-  <!-- Required meta tags -->
+  <!-- meta tags -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- SEO / descriptive metadata -->
+  <!-- metadata -->
   <title>GreenLiving Store — About Us</title>
   <meta name="description" content="Team portfolios: skills, education, volunteering, certifications, and experience.">
   <meta name="author" content="Student Group">
 
-  <!-- External CSS (site-wide styling) -->
+  <!-- External CSS -->
   <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
-  <!-- ===================== SITE HEADER + NAV ===================== -->
+  <!-- SITE HEADER + NAV -->
   <header class="site-header">
     <div class="container navbar">
       <a class="brand" href="index.html" aria-label="Go to Home page">
@@ -33,7 +33,7 @@
           <li><a href="about.html" data-page="about.html">About Us</a></li>
           <li><a href="contact.html" data-page="contact.html">Contact</a></li>
 
-          <!-- Theme toggle + cart badge show dynamic JavaScript behavior -->
+          <!-- cart badge -->
           <li>
             <span class="chip" aria-label="Cart items">
               🛒 Cart: <span id="cartCount">0</span>
@@ -50,7 +50,7 @@
       The About Us section contains detailed portfolios of each group member. Replace the placeholders with your real details.
     </p>
 
-    <!-- Internal CSS: portfolio card layout -->
+    <!--Internal CSS-->
     <style>
       /* About page: portfolio images as circles for a clean look */
       .pfp { width: 110px; height: 110px; border-radius: 999px; border: 1px solid #e5e7eb; object-fit: cover; }
@@ -61,7 +61,7 @@
     <section class="grid grid-3">
       <!-- Member 1 -->
       <article class="card">
-        <img class="pfp" src="images/team_1.jpg" alt="Team member 1 photo placeholder">
+        <img class="pfp" src="../images/team_1.jpg" alt="Team member 1 photo placeholder">
         <h2 style="margin-bottom:0;">Member 1: Full Name</h2>
         <p class="muted" style="margin-top:0.2rem;">Role: Front-end Developer / Designer</p>
 
@@ -114,7 +114,7 @@
         </ul>
 
         <h3>Education</h3>
-        <p class="muted">+2 / Bachelor’s — College Name</p>
+        <p class="muted">+2 / Bachelor's — College Name</p>
 
         <h3>Volunteering</h3>
         <p class="muted">Volunteer teacher • Event organizer</p>
@@ -148,7 +148,7 @@
         </ul>
 
         <h3>Education</h3>
-        <p class="muted">Bachelor’s — University Name</p>
+        <p class="muted">Bachelor's — University Name</p>
 
         <h3>Volunteering</h3>
         <p class="muted">Open-source contributor • Local NGO support</p>
@@ -170,15 +170,15 @@
       </p>
     </section>
   </main>
-  <!-- ===================== SITE FOOTER ===================== -->
+  <!-- FOOTER -->
   <footer class="site-footer">
     <div class="container footer-row">
       <div>
         <div class="small"><strong>GreenLiving Store</strong> — sustainable lifestyle products for everyday use.</div>
-        <div class="small">Demo website for coursework (HTML5/CSS3/JS).</div>
+        <div class="small">Static website for Information System (HTML5/CSS3/JS).</div>
       </div>
       <div class="small">
-        <div>© 2026 GreenLiving (Demo)</div>
+        <div>© 2026 GreenLiving</div>
         <div class="muted">Made with ♻️ in Nepal</div>
       </div>
     </div>
