--- a/Pages/index.html
+++ b/Pages/index.html
@@ -24,7 +24,6 @@
 
       <nav aria-label="Primary">
         <ul>
-          <!-- page linking helps JavaScript highlight the current page -->
           <li><a href="index.html" data-page="index.html">Home</a></li>
           <li><a href="products.html" data-page="products.html">Products</a></li>
           <li><a href="blog.html" data-page="blog.html">Blog</a></li>
@@ -50,7 +49,7 @@
         <div>
           <div class="chip">♻️ Low-waste • Reusable • Ethical</div>
 
-          <!-- Inline CSS use -->
+          <!-- inline css-->
           <p style="margin:0.65rem 0 0; display:inline-block; padding:0.25rem 0.6rem; border-radius:999px; border:1px dashed #16a34a;">
             New year deal: Save up to 30% on essentials
           </p>
@@ -111,7 +110,7 @@
       </div>
     </section>
 
-    <!--Information Cards -->
+    <!--information cards -->
     <section style="margin-top:1.5rem;">
       <div class="container grid grid-3">
         <article class="card">
@@ -130,7 +129,7 @@
     </section>
   </main>
 
-  <!-- Internal Css -->
+  <!-- internal css -->
   <style>
     /* messing with spacing for the hero section list*/
     .hero ul { margin: 0.5rem 0 0; padding-left: 1.1rem; }
@@ -146,12 +145,12 @@
       if (cart && kpi2) kpi2.textContent = cart.textContent;
     });
   </script>
-  <!-- Footer -->
+  <!--footer -->
   <footer class="site-footer">
     <div class="container footer-row">
       <div>
         <div class="small"><strong>GreenLiving Store</strong> — sustainable lifestyle products for everyday use.</div>
-        <div class="small">Demo website for coursework (HTML5/CSS3/JS).</div>
+        <div class="small">Static website for Information System (HTML5/CSS3/JS).</div>
       </div>
       <div class="small">
         <div>© 2026 GreenLiving</div>
@@ -160,7 +159,7 @@
     </div>
   </footer>
 
-  <!-- External JavaScript -->
+  <!-- external js -->
   <script src="../js/main.js"></script>
 </body>
 </html>
