--- a/Pages/research.html
+++ b/Pages/research.html
@@ -10,11 +10,11 @@
   <meta name="description" content="Research section contrasting your website components against researched websites.">
   <meta name="author" content="Student Group">
 
-  <!-- External CSS (site-wide styling) -->
+  <!-- external css -->
   <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
-  <!--SITE HEADER + NAV -->
+  <!--header and navbar-->
   <header class="site-header">
     <div class="container navbar">
       <a class="brand" href="index.html" aria-label="Go to Home page">
@@ -24,7 +24,6 @@
 
       <nav aria-label="Primary">
         <ul>
-          <!-- data-page to highlight the current page -->
           <li><a href="index.html" data-page="index.html">Home</a></li>
           <li><a href="products.html" data-page="products.html">Products</a></li>
           <li><a href="blog.html" data-page="blog.html">Blog</a></li>
@@ -157,7 +156,7 @@
       </div>
     </section>
   </main>
-  <!-- SITE FOOTER -->
+  <!-- footer -->
   <footer class="site-footer">
     <div class="container footer-row">
       <div>
@@ -171,7 +170,7 @@
     </div>
   </footer>
 
-  <!-- External JavaScript -->
+  <!-- external javascript-->
   <script src="../js/main.js"></script>
 </body>
 </html>
