--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -45,7 +45,7 @@
   <main class="container" style="padding: 1.5rem 0;">
     <h1>Contact</h1>
     <p class="muted">
-      This page includes a functional form (front-end demo) with JavaScript validation and dynamic success feedback.
+      This page includes a functional form with JavaScript validation and dynamic success feedback.
     </p>
 
     <!--internal css-->
