--- a/Pages/index.html
+++ b/Pages/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!--metadata -->
+  <!-- metadata -->
   <title>GreenLiving Store — Home</title>
-  <meta name="description" content="Eco-friendly products and tips for a sustainable lifestyle. A demo e-commerce website.">
+  <meta name="description" content="Eco-friendly products and tips for a sustainable lifestyle. An e-commerce website.">
   <meta name="author" content="Student Group">
 
   <!-- external css -->
@@ -56,7 +56,7 @@
 
           <h1>Make sustainable living simple.</h1>
           <p>
-            GreenLiving Store sells practical eco-friendly products—reusables, plastic-free essentials, and
+            GreenLiving Store sells practical and reusable eco-friendly products, these products are plastic free, and
             energy-smart items. This website demonstrates a consistent multi-page e-commerce site.
           </p>
 
@@ -145,7 +145,7 @@
       if (cart && kpi2) kpi2.textContent = cart.textContent;
     });
   </script>
-  <!--footer -->
+  <!-- footer -->
   <footer class="site-footer">
     <div class="container footer-row">
       <div>
