--- a/Pages/products.html
+++ b/Pages/products.html
@@ -45,8 +45,7 @@
   <main class="container" style="padding: 1.5rem 0;">
     <h1>Products</h1>
     <p class="muted">
-      Below are sample products with discounted and actual prices, descriptions, tags, and “Add to Cart” buttons.
-      (This is a front-end demo; no payment processing.)
+      Below are our products with discounted and actual prices, descriptions, tags, and “Add to Cart” buttons.
     </p>
 
     <!-- internal css -->
