--- a/Pages/research.html
+++ b/Pages/research.html
@@ -57,8 +57,8 @@
     </style>
 
     <section class="card">
-      <h2>Reference websites (5+)</h2>
-      <p class="muted">These are examples of real e-commerce websites that commonly include advanced components:</p>
+      <h2>Reference websites:</h2>
+      <p class="muted">These are real e-commerce websites that commonly include advanced components:</p>
       <ol class="refs">
         <li><span class="pill">Reference 1</span> Daraz — filters, flash sales, category navigation, delivery tracking</li>
         <li><span class="pill">Reference 2</span> Etsy — handcrafted marketplace, seller profiles, favorites, personalization</li>
