--- a/Pages/index.html
+++ b/Pages/index.html
@@ -106,6 +106,7 @@
           These product cards are injected using JavaScript on page load to demonstrate dynamic DOM updates.
         </p>
         <div class="grid grid-3" id="featuredProducts">
+          <!--product cards-->
         </div>
       </div>
     </section>
