--- a/Pages/products.html
+++ b/Pages/products.html
@@ -59,7 +59,7 @@
     <!-- filter ui -->
     <div class="filter-bar card" aria-label="Product filters">
       <span class="badge hot">Hot Deals</span>
-      <span class="muted">Tip: click “View” to jump to an anchored product section.</span>
+      <span class="muted">Get our products at flat discounts (20% off).</span>
     </div>
 
     <!-- Products list uses semantic articles; ids match JS data for anchor links -->
