--- a/Pages/about.html
+++ b/Pages/about.html
@@ -11,11 +11,11 @@
   <meta name="description" content="Team portfolios: skills, education, volunteering, certifications, and experience.">
   <meta name="author" content="Student Group">
 
-  <!-- External CSS -->
+  <!-- external css -->
   <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
-  <!-- SITE HEADER + NAV -->
+  <!-- header + nav -->
   <header class="site-header">
     <div class="container navbar">
       <a class="brand" href="index.html" aria-label="Go to Home page">
@@ -47,10 +47,10 @@
   <main class="container" style="padding: 1.5rem 0;">
     <h1>About Us</h1>
     <p class="muted">
-      The About Us section contains detailed portfolios of each group member. Replace the placeholders with your real details.
+      The About Us section contains detailed portfolios of each group member.
     </p>
 
-    <!--Internal CSS-->
+    <!--internal css-->
     <style>
       /* About page: portfolio images as circles for a clean look */
       .pfp { width: 110px; height: 110px; border-radius: 999px; border: 1px solid #e5e7eb; object-fit: cover; }
