--- a/Pages/blog.html
+++ b/Pages/blog.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Required meta tags -->
+  <!-- meta tags -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- SEO / descriptive metadata -->
+  <!-- metadata -->
   <title>GreenLiving Store — Blog</title>
   <meta name="description" content="How technology affects daily life and business — blog demonstration page.">
   <meta name="author" content="Student Group">
 
-  <!-- External CSS (site-wide styling) -->
+  <!-- external css-->
   <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
-  <!-- SITE HEADER + NAV -->
+  <!-- header + nav -->
   <header class="site-header">
     <div class="container navbar">
       <a class="brand" href="index.html" aria-label="Go to Home page">
@@ -47,7 +47,7 @@
     <h1>Blog</h1>
     <p class="muted">Demonstration: How technology has affected daily life and business.</p>
 
-    <!-- Internal CSS -->
+    <!-- internal css-->
     <style>
       /* Blog page: make article content readable with better measure */
       .article { max-width: 850px; margin: 0 auto; }
@@ -95,7 +95,8 @@
       </p>
     </article>
   </main>
-  <!-- ===================== SITE FOOTER ===================== -->
+
+  <!---footer-->
   <footer class="site-footer">
     <div class="container footer-row">
       <div>
