--- a/Pages/about.html
+++ b/Pages/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <html lang="en">
+
 <head>
   <!-- meta tags -->
   <meta charset="UTF-8">
@@ -14,6 +15,7 @@
   <!-- external css -->
   <link rel="stylesheet" href="../css/main.css">
 </head>
+
 <body>
   <!-- header + nav -->
   <header class="site-header">
@@ -53,112 +55,121 @@
     <!--internal css-->
     <style>
       /* About page: portfolio images as circles for a clean look */
-      .pfp { width: 110px; height: 110px; border-radius: 999px; border: 1px solid #e5e7eb; object-fit: cover; }
-      .pilllist { display:flex; flex-wrap:wrap; gap:0.4rem; margin:0.35rem 0 0; padding:0; list-style:none; }
-      .pilllist li { padding:0.25rem 0.55rem; border:1px solid #e5e7eb; border-radius:999px; font-size:0.85rem; }
+      .pfp {
+        width: 110px;
+        height: 110px;
+        border-radius: 999px;
+        border: 1px solid #e5e7eb;
+        object-fit: cover;
+      }
+
+      .pilllist {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 0.4rem;
+        margin: 0.35rem 0 0;
+        padding: 0;
+        list-style: none;
+      }
+
+      .pilllist li {
+        padding: 0.25rem 0.55rem;
+        border: 1px solid #e5e7eb;
+        border-radius: 999px;
+        font-size: 0.85rem;
+      }
     </style>
 
     <section class="grid grid-3">
       <!-- Member 1 -->
       <article class="card">
         <img class="pfp" src="../images/team_1.jpg" alt="Team member 1 photo placeholder">
-        <h2 style="margin-bottom:0;">Member 1: Full Name</h2>
-        <p class="muted" style="margin-top:0.2rem;">Role: Front-end Developer / Designer</p>
+        <h2 style="margin-bottom:0;">Member 1:<br><b>Nishan Neupane</b></h2>
+        <p class="muted" style="margin-top:0.2rem;">Role: JavaScript Developer</p>
 
         <h3>Technical skills</h3>
         <ul>
-          <li>HTML5 semantic layout, responsive CSS</li>
-          <li>JavaScript DOM manipulation</li>
-          <li>Basic UI/UX principles</li>
-        </ul>
-
-        <h3>Soft skills</h3>
-        <ul>
-          <li>Communication</li>
-          <li>Team collaboration</li>
-          <li>Time management</li>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>Java</li>
         </ul>
 
         <h3>Education</h3>
-        <p class="muted">BSc (Hons) Computing — University/College Name</p>
+        <p class="muted">BSc (Hons) Computing with Artificial Intelligence — Islington College</p>
 
-        <h3>Volunteering</h3>
-        <p class="muted">Community clean-up volunteer • Student tech club member</p>
-
-        <h3>Certifications</h3>
-        <ul class="pilllist">
-          <li>HTML Essentials</li>
-          <li>CSS Basics</li>
-          <li>Intro to JS</li>
-        </ul>
       </article>
 
       <!-- Member 2 -->
       <article class="card">
         <img class="pfp" src="images/team_2.jpg" alt="Team member 2 photo placeholder">
-        <h2 style="margin-bottom:0;">Member 2: Full Name</h2>
-        <p class="muted" style="margin-top:0.2rem;">Role: Content Writer / Researcher</p>
+        <h2 style="margin-bottom:0;">Member 2:<br><b>Aabhushan Shrestha</b></h2>
+        <p class="muted" style="margin-top:0.2rem;">Role: Form & Layout Designer</p>
 
         <h3>Technical skills</h3>
         <ul>
-          <li>Content planning and documentation</li>
-          <li>Research and comparative analysis</li>
-          <li>Basic web publishing</li>
-        </ul>
-
-        <h3>Soft skills</h3>
-        <ul>
-          <li>Writing and storytelling</li>
-          <li>Presentation skills</li>
-          <li>Attention to detail</li>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>Java</li>
         </ul>
 
         <h3>Education</h3>
-        <p class="muted">+2 / Bachelor's — College Name</p>
-
-        <h3>Volunteering</h3>
-        <p class="muted">Volunteer teacher • Event organizer</p>
-
-        <h3>Certifications</h3>
-        <ul class="pilllist">
-          <li>Digital Literacy</li>
-          <li>Research Methods</li>
-          <li>Presentation</li>
-        </ul>
+        <p class="muted">BSc (Hons) Computing with Artificial Intelligence — Islington College</p>
       </article>
 
       <!-- Member 3 -->
       <article class="card">
         <img class="pfp" src="images/team_3.jpg" alt="Team member 3 photo placeholder">
-        <h2 style="margin-bottom:0;">Member 3: Full Name</h2>
-        <p class="muted" style="margin-top:0.2rem;">Role: JavaScript Developer / QA</p>
+        <h2 style="margin-bottom:0;">Member 3:<br><b>Ujjwol Gautam</b></h2>
+        <p class="muted" style="margin-top:0.2rem;">Role: Researcher</p>
 
         <h3>Technical skills</h3>
         <ul>
-          <li>Form validation and event handling</li>
-          <li>Testing and debugging</li>
-          <li>Accessibility basics</li>
-        </ul>
-
-        <h3>Soft skills</h3>
-        <ul>
-          <li>Problem solving</li>
-          <li>Leadership</li>
-          <li>Adaptability</li>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>Java</li>
         </ul>
 
         <h3>Education</h3>
-        <p class="muted">Bachelor's — University Name</p>
+        <p class="muted">BSc (Hons) Computing with Artificial Intelligence — Islington College</p>
+      </article>
 
-        <h3>Volunteering</h3>
-        <p class="muted">Open-source contributor • Local NGO support</p>
+      <!-- Member 4 -->
+      <article class="card">
+        <img class="pfp" src="images/team_3.jpg" alt="Team member 4 photo placeholder">
+        <h2 style="margin-bottom:0;">Member 4:<br><b>Pratha Kafle</b></h2>
+        <p class="muted" style="margin-top:0.2rem;">Role: Navbar & Front-end Designer</p>
 
-        <h3>Certifications</h3>
-        <ul class="pilllist">
-          <li>JavaScript Foundations</li>
-          <li>Web Accessibility</li>
-          <li>Git Basics</li>
+        <h3>Technical skills</h3>
+        <ul>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>Java</li>
         </ul>
+
+        <h3>Education</h3>
+        <p class="muted">BSc (Hons) Computing with Artificial Intelligence — Islington College</p>
+      </article>
+
+      <!-- Member 5 -->
+      <article class="card">
+        <img class="pfp" src="images/team_3.jpg" alt="Team member 5 photo placeholder">
+        <h2 style="margin-bottom:0;">Member 5:<br><b>Bibisha Maharjan</b></h2>
+        <p class="muted" style="margin-top:0.2rem;">Role: Blog & Product Designer</p>
+
+        <h3>Technical skills</h3>
+        <ul>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>Java</li>
+        </ul>
+
+        <h3>Education</h3>
+        <p class="muted">BSc (Hons) Computing with Artificial Intelligence — Islington College</p>
       </article>
     </section>
 
@@ -169,6 +180,7 @@
         This demo website focuses on clean structure, consistent navigation, and basic JavaScript interactivity.
       </p>
     </section>
+
   </main>
   <!-- FOOTER -->
   <footer class="site-footer">
@@ -187,4 +199,5 @@
   <!-- External JavaScript -->
   <script src="../js/main.js"></script>
 </body>
+
 </html>
